--- a/.gitconfig
+++ b/.gitconfig
@@ -2,10 +2,14 @@
     name = barberj
     email = barber.justin@gmail.com
 
+[push]
+    default = tracking
+
 [color]
     diff = auto
     status = auto
     branch = auto
+    interactive = auto
 
 [core]
     autocrlf = false
