updates ignoring mac user home dir defaults

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,15 @@
 /.mysql_history
 /.vim/.netrwhist
 /.lesshst
+/.CFUserTextEncoding
+/.DS_Store
+/.Trash
+/Desktop
+/Documents
+/Downloads
+/Library
+/Movies
+/Music
+/Pictures
+/Public
+/bin
