--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,7 @@
 [core]
     autocrlf = false
     filemode = false
+	excludesfile = /Users/jbarber/.gitignore_global
 
 [branch]
 	autosetupmerge = true
